fixed contact form alignment and bio images alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -232,7 +232,7 @@ div.panel.show {
 
 .bio-image {
   height: 100px;
-  padding-right: 0.5em;
+  // padding-right: 0.5em;
 }
 
 .bio-image-one {
@@ -243,7 +243,7 @@ div.panel.show {
 
 #contact-text {
   padding-bottom: 1.5em;
-  padding-left: 9em;
+  padding-left: 5em;
   padding-top: 4em;
   font-family: 'Quicksand', sans-serif;
 
